--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,13 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color:#4d5ae5;
+    margin-right: 76px;
     
       
 }
-
+.header-container{
+    border-bottom: 1px solid #e7e9fc;
+}
 .accent-header{
     color: #2e2f42;
         font-family: "Raleway", sans-serif;
@@ -65,6 +68,7 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding: 24px 0;
     
     
 }
@@ -72,11 +76,9 @@
 
 .first-section {
     background-color: #2e2f42;
-    width: 1440px;
-        height: 600px;
-        flex-shrink: 0;
-        flex-direction: column;
-        justify-content: center;
+    
+    padding: 188px 0;
+        
     
     
     
@@ -87,27 +89,26 @@
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
-    width: 496px;
-    height: 120px;
+    max-width: 496px;
     
-    padding:188px 472px 292px 472px;
+    
+    
 
     
 }
 .first-section-button{
-    background-color: #4D5AE5;
+    background-color: #4d5ae5;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color:#FFFFFFFF;
-    display: inline-flex;
-    padding: 16px 32px;
-    align-items: flex-start;
-    gap: 10px;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
     border-radius: 4px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .first-section-button:hover{
@@ -121,13 +122,13 @@
 }
 
 /*Section 2*/
+.second-section{
+    padding: 120px 0;
+}
 
 .second-section-container{
-    width: 1128px;
-        height: 104px;
-        flex-shrink: 0;
-        margin:120px 156px 120px 156px;
-        gap:24px;
+    display: flex;
+    gap: 24px;
 }
 .second-section-title, .second-section-paragraph{
     display: flex;
@@ -136,7 +137,10 @@
     align-items: flex-start;
     gap: 8px;
 }
+.second-section-item{
+    width: calc((100% - 72px) / 4);
 
+}
        
 
 .second-section-title {
@@ -146,6 +150,7 @@
     line-height: 1.2;
     letter-spacing: 0.02em;
     background-color: #FFFFFFFF;
+    margin-bottom: 8px;
     
     
 
@@ -160,9 +165,7 @@
 }
 /*Section 3*/
 .third-section-container{
-    width: 1128px;
-    height: 412px;
-    margin:120px 156px 120px 156px;
+    padding-bottom: 120px;
 }
 .third-section {
     display: inline-flex;
@@ -170,7 +173,7 @@
     gap:24px;
     width: 1128px;
     height: 412px;
-    margin-top:72px;
+    
 }
 .third-section-title {
     color: #2e2f42;
@@ -178,7 +181,15 @@
     line-height: 1.11;
     text-align: center;
     text-transform: capitalize;
+    margin-bottom: 72px;
+    
 }
+.third-section-item{
+    display: flex;
+    gap: 24px;
+    
+}
+
 /*Section 4*/
 
 .fourth-section-container{
@@ -300,10 +311,15 @@
 }
 .menu{
     display: flex;
-    column-gap:40px;
+    gap:40px;
     align-items: flex-start;
     
 }
-.hero-content-container{
+.hero-content{
     display: flex;
+}
+.container{
+    width: 1158px;
+    margin:0;
+    padding: 0 15px;
 }
