--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@
 :root{
     --brand-color:#434455;
 }
+
+
+
 .body-studio {
     font-family: "Roboto", sans-serif;
     color: #434455;
@@ -21,6 +24,7 @@
 }
 .header-container{
     border-bottom: 1px solid #e7e9fc;
+    
 }
 .accent-header{
     color: #2e2f42;
@@ -49,7 +53,6 @@
 .address {
     font-style: normal;
     display:flex;
-
     justify-content: flex-end;
     gap:40px;
     width: 151px;
@@ -62,6 +65,7 @@
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    
 }
 .index{
     font-weight: 500;
@@ -76,7 +80,8 @@
 
 .first-section {
     background-color: #2e2f42;
-    
+    min-width: 1440px;
+        
     padding: 188px 0;
         
     
@@ -90,7 +95,7 @@
     text-align: center;
     letter-spacing: 0.02em;
     max-width: 496px;
-    
+    margin:auto;
     
     
 
@@ -109,6 +114,10 @@
     height: 56px;
     border: none;
     border-radius: 4px;
+    margin:auto;
+    margin-top:48px;
+    
+    
 }
 
 .first-section-button:hover{
@@ -129,6 +138,9 @@
 .second-section-container{
     display: flex;
     gap: 24px;
+    margin:auto;
+    
+    
 }
 .second-section-title, .second-section-paragraph{
     display: flex;
@@ -136,10 +148,11 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 8px;
+    
 }
 .second-section-item{
-    width: calc((100% - 72px) / 4);
-
+flex-basis: calc((100% - 72px) / 4);
+margin:auto;
 }
        
 
@@ -168,11 +181,13 @@
     padding-bottom: 120px;
 }
 .third-section {
-    display: inline-flex;
+    
     align-items: flex-start;
     gap:24px;
     width: 1128px;
     height: 412px;
+    
+    
     
 }
 .third-section-title {
@@ -182,6 +197,7 @@
     text-align: center;
     text-transform: capitalize;
     margin-bottom: 72px;
+    
     
 }
 .third-section-item{
@@ -193,16 +209,17 @@
 /*Section 4*/
 
 .fourth-section-container{
-    width: 1440px;
+    min-width: 1440px;
     height: 732px;
     background-color: #F4F4FD;
     
 }
 .fourth-section {
     gap:24px;
-    margin-top:232px;
-    margin-bottom: 120px;
+    min-width: 1128px;
+    margin:0 auto;
     
+   
 }
 
 .fourth-section-title {
@@ -213,6 +230,8 @@
     letter-spacing: 0.02em;
     text-transform: capitalize;
     background-color: #F4F4FD;
+    padding-top:120px;
+    padding-bottom: 72px;
     
 }
 
@@ -229,10 +248,12 @@
 
 .footer {
     background-color: #2e2f42;
+    padding: 100px 0;
 }
 
 .footer-paragraph {
     color: #F4F4FD;
+    max-width: 264px;
 }
 
 .web-footer {
@@ -243,6 +264,8 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 .accent-footer {
         color:#f4f4fd;
@@ -254,12 +277,35 @@
         letter-spacing: 0.54px;
         text-transform: uppercase;
 }
-
+.footer-container{
+    margin-left:156px;
+}
 /*Portfolio*/
+.body-portfolio {
+    font-family: "Roboto", sans-serif;
+    color: #434455;
+    background-color: #FFFFFFFF;
+}
+.portfolio-cards{
+
+}
+.portfolio-cards-list{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-bottom: 72px;
+}
+.section-portfolio{
+    padding-top: 96px;
+    padding-bottom: 120px;
+
+}
+
 .body-portfolio{
     font-family: "Roboto", sans-serif;
     color:#434455;
 }
+
 
 .button-portfolio{
     color: #4d5ae5;
@@ -272,15 +318,21 @@
         line-height: 1.5;
         letter-spacing: 0.04em;
         cursor: pointer;
+        padding: 12px 24px;
+        border: 1px solid #e7e9fc;
+        border-radius: 4px;
+        
 }
 
 .button-portfolio:hover{
     color: #FFFFFFFF;
     background-color: #404bbf;
+    border: 1px solid transparent;
 }
 .button-portfolio:focus{
     color: #FFFFFFFF;
     background-color: #404BBF;
+    border: 1px solid transparent;
 }
 /*List portfolio*/
 .title-element{
@@ -290,12 +342,38 @@
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        margin-bottom: 8px;
 }
 .paragraph-element{
     color: #434455;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
+}
+.portfolio-images{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+    
+    
+}
+.list-element{
+    width: calc((100% - 48px) / 3);
+    
+    
+    
+    
+}
+.name-application{
+    display: flex;
+    width: 360px;
+    padding: 32px 16px;
+    flex-direction: column;
+    align-items: flex-start;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+        
 }
 /*Tema3*/
 * {
@@ -319,7 +397,8 @@
     display: flex;
 }
 .container{
-    width: 1158px;
+    width: 1128px;
     margin:0;
     padding: 0 15px;
+    
 }
