--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@
     width: 1158px;
     margin: 0 auto;
 }
+
 /*Section 1*/
 
 .first-section {
@@ -246,15 +247,18 @@ gap: 24px
 .list-item{
     background-color: #FFFFFFFF;
     border-radius: 0px 0px 4px 4px 4px;
+    width: calc((100% - 72px) / 4);
+    
     
 }
 .card-image{
     display: block;
 
 }
-.list-item-card{
-    padding: 32px 0;
+.name-and-job{
+
 }
+
 
 /*Footer*/
 
@@ -293,6 +297,9 @@ gap: 24px
     margin-left:156px;
 }
 /*Portfolio*/
+img {
+    display: block
+}
 .body-portfolio {
     font-family: "Roboto", sans-serif;
     color: #434455;
