--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,7 @@ margin:auto;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:#434455;
+    text-align: center;
     
     
 
@@ -257,7 +258,7 @@ gap: 24px
 
 }
 .name-and-job{
-
+padding: 32px 0;
 }
 
 
