--- a/css/styles.css
+++ b/css/styles.css
@@ -319,14 +319,13 @@ img {
     color: #434455;
     background-color: #FFFFFFFF;
 }
-.portfolio-cards{
 
-}
 .portfolio-cards-list{
     display: flex;
     justify-content: center;
     gap: 24px;
     margin-bottom: 72px;
+    
 }
 .section-portfolio{
     padding-top: 96px;
@@ -392,7 +391,7 @@ img {
     
 }
 .list-element{
-    width: calc((100% - 48px) / 3);
+    width: calc(100% - 48px) / 3;
     
     
     
