--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@
 .second-section-item{
 flex-basis: calc((100% - 72px) / 4);
 margin:auto;
+
 }
        
 
@@ -184,16 +185,22 @@ margin:auto;
     margin-bottom: 8px;
     text-align: center;
     
-    
-    
 
+}
+
+
+.fourth-section-paragraph{
+    font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+        text-align: center;
 }
 .second-section-paragraph {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:#434455;
-    
     
     
 
@@ -225,6 +232,7 @@ margin:auto;
 .third-section-item{
     display: flex;
     gap: 24px;
+    width: calc((100% - 48px) / 3);
     
 }
 
@@ -238,11 +246,15 @@ margin:auto;
 }
 .fourth-section {
     padding: 120px 0;
+    
    
 }
 .fourth-section-list{
 display: flex;
-gap: 24px
+gap: 24px;
+width: calc((100% - 72px) / 4);
+border-radius: 0px 0px 4px 4px 4px;
+
 }
 
 .fourth-section-title {
@@ -260,19 +272,24 @@ gap: 24px
 
 .list-item{
     background-color: #FFFFFFFF;
-    border-radius: 0px 0px 4px 4px 4px;
-    width: calc((100% - 72px) / 4);
+    
     
     
 }
+
 .card-image{
     display: block;
+    
+        
 
 }
 .name-and-job{
 padding: 32px 0;
-}
 
+}
+.fourth-section-paragraph{
+    text-align: center;
+}
 
 /*Footer*/
 
@@ -391,7 +408,7 @@ img {
     
 }
 .list-element{
-    width: calc(100% - 48px) / 3;
+    width: calc((100% - 48px)) / 3;
     
     
     
