--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,7 @@ margin:auto;
 .third-section-item{
     display: flex;
     gap: 24px;
-    width: calc((100% - 48px) / 3);
+    width: calc((100% - 3 * 16px) / 3);
     
 }
 
@@ -240,8 +240,9 @@ margin:auto;
 
 .fourth-section-container{
     min-width: 1440px;
-    height: 732px;
+    min-height: 732px;
     background-color: #F4F4FD;
+    
     
 }
 .fourth-section {
@@ -252,8 +253,8 @@ margin:auto;
 .fourth-section-list{
 display: flex;
 gap: 24px;
-width: calc((100% - 72px) / 4);
-border-radius: 0px 0px 4px 4px 4px;
+
+
 
 }
 
@@ -269,18 +270,24 @@ border-radius: 0px 0px 4px 4px 4px;
     margin-bottom: 72px;
     
 }
-
+.fourth-section-name{
+    color: #2e2f42;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        background-color: #FFFFFFFF;
+        margin-bottom: 8px;
+        text-align: center;
+}
 .list-item{
-    background-color: #FFFFFFFF;
-    
-    
-    
+    background-color: #FFFFFFFF;   
 }
 
 .card-image{
     display: block;
-    
-        
+    flex-basis: calc((100% - 3 * 24px) / 4);
+    border-radius: 0px 0px 4px 4px 4px;
 
 }
 .name-and-job{
