--- a/css/styles.css
+++ b/css/styles.css
@@ -260,7 +260,16 @@ gap: 24px;
 
 
 }
-
+.fourth-section-list li {
+    margin-right: 24px;
+}
+.fourth-section-list li:last-child {
+    margin-right: 0;
+}
+.fourth-section-list li:first-child {
+    width: calc((100% - 72px) / 4);
+   
+}
 .fourth-section-title {
     color: #2e2f42;
     font-size: 36px;
@@ -304,8 +313,7 @@ gap: 24px;
 
 .card-image{
     display: block;
-    flex-basis: calc((100% - 3 * 24px) / 4);
-    border-radius: 0px 0px 4px 4px 4px;
+    
 
 }
 .name-and-job{
@@ -433,13 +441,23 @@ img {
     
     
 }
-.list-element{
-    width: calc((100% - 48px)) / 3;
-    
-    
-    
-    
+
+li:nth-child(3n) {
+    margin-right: 0;
 }
+
+
+li:nth-child(4n) {
+    margin-bottom: 0;
+}
+
+
+
+.portfolio-images.list .list-element:first-child {
+    width: calc((100% - 48px) / 3);
+   
+}
+
 .name-application{
     display: flex;
     width: 360px;
