--- a/css/styles.css
+++ b/css/styles.css
@@ -263,10 +263,7 @@ gap: 24px;
 
 
 }
-.fourth-section-list {
-    margin-right: 24px;
-}
-.fourth-section-list:last-child {
+.fourth-section-list.list:last-child {
     margin-right: 0;
 }
 .fourth-section-list .list-item:first-child {
@@ -456,7 +453,7 @@ li:nth-child(4n) {
 
 
 
-.portfolio-images.list .list-element:first-child {
+.portfolio-images .list-element:first-child {
     width: calc((100% - 48px) / 3);
    
 }
